# screenmap

./: .gitignore  README.txt  flake.nix
process_csv/: Cargo.toml
process_csv/src/: main.rs
screenmap/: Cargo.toml
screenmap/src/: app.rs  interface.rs  lib.rs  main.rs  server.rs
screenmap/style/: main.scss
