[package]
name = "screenmap"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
axum = { version = "0.8.0", features = ["ws", "macros"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"], optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
anyhow = "1.0.98"
server_fn = "0.8.2"
futures = "0.3.31"
cfg-if = "1.0.1"
fuzzy-matcher = "0.3.7"
log = "0.4.27"
leptos-use = "0.16.2"

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr",
    "sqlx",
]
sqlx = ["dep:sqlx"]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "screenmap"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
